--- a/manager/src/main/res/values-v26/strings.xml
+++ b/manager/src/main/res/values-v26/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="start_server_summary_adb"><![CDATA[
-    After Android 8.0, due to system behavior changes, please <b>do not disable \"USB debugging\"</b> and make sure <b>USB usage mode is "Charge only"</b>, or the server will be stopped.
+    After Android 8.0, due to system behavior changes, please <b>do not disable \"USB debugging\"</b> and make sure <b>USB usage mode unchanged</b>, or the server will be stopped.
     <p><b>You will have to re-execute following steps every time you reboot your device.</b>
     <p>Enable \"USB debugging\" in \"Developer options\" and connect your device to computer.
     <br>Type following content into computer\'s terminal and hit Enter
