--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="permission_group_description">使用由 Shizuku 提供的特权 API</string>
-    <string name="permission_label">使用 Shizuku 特权 API</string>
-    <string name="permission_description">允许应用使用由 Shizuku 提供的特权 API。</string>
-    <string name="server_running">版本 %2$d 运行中（%1$s）</string>
-    <string name="server_running_update">版本 %2$d 运行中（%1$s）\n重启服务以升级至版本 %3$d</string>
-    <string name="server_not_running">点击检查服务是否运行</string>
-    <string name="server_require_restart">需要重新启动服务</string>
-    <string name="server_no_token">运行中，但未正确接收令牌\n点击请求令牌</string>
+    <string name="permission_group_description">使用 Shizuku</string>
+    <string name="permission_label">以更高权限使用系统 API</string>
+    <string name="permission_description">允许应用以更高权限使用系统 API。</string>
+    <string name="server_running">服务 %1$s 正在运行（版本 %3$d， %2$s）</string>
+    <string name="server_running_update">服务 %1$s 正在运行（版本 %3$d， %2$s，重新启动以升级到版本 %4$d）</string>
+    <string name="server_not_running">服务 %1$s 没有运行，轻触重新检查</string>
+    <string name="server_not_running_tap_retry">服务 %1$s 没有运行，轻触重新检查</string>
+    <string name="server_require_restart">服务 %1$s 需要重新启动</string>
+    <string name="server_no_token">服务 %1$s 正在运行，但未正确接收令牌，点击请求令牌</string>
     <string name="server_start">启动</string>
     <string name="server_restart">重新启动</string>
-    <string name="start_server_title_root"><![CDATA[通过 root 权限启动服务]]></string>
-    <string name="start_server_title_adb"><![CDATA[通过 adb 启动或升级服务]]></string>
+    <string name="start_server_title_root"><![CDATA[通过 root 权限启动核心服务]]></string>
+    <string name="start_server_title_adb"><![CDATA[通过 adb 启动或升级核心服务]]></string>
     <string name="start_server_summary_adb"><![CDATA[
     <b>以下步骤需要在每次重新启动后进行。</b>
     <p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。
@@ -26,14 +27,14 @@
     <string name="auth_allow">总是允许</string>
     <string name="auth_deny">拒绝</string>
     <string name="auth_message"><![CDATA[要允许 <b>%1$s</b> 以 <b>%2$s</b> 身份调用 API 吗？]]></string>
-    <string name="auth_manager_no_token">Shizuku Manager 未正确接收令牌，请尝试重新启动服务，或是使用主界面的获取令牌。</string>
-    <string name="auth_server_dead">可能由于非正常重启等原因，服务需要重新启动。</string>
-    <string name="auth_cannot_connect">无法连接服务，请确认服务正在运行。</string>
-    <string name="authorized_apps_manage">自动授权的应用</string>
+    <string name="auth_manager_no_token">Shizuku Manager 未正确接收令牌，请尝试重新启动核心服务，或是使用主界面的获取令牌。</string>
+    <string name="auth_server_dead">可能由于非正常重启等原因，核心服务需要重新启动。</string>
+    <string name="auth_cannot_connect">无法连接至核心服务，请确认其正在运行。</string>
+    <string name="authorized_apps_manage">已授权的应用</string>
     <plurals name="authorized_apps_count">
-        <item quantity="other"><![CDATA[已授权 %d 个无需确认获取令牌的应用]]></item>
+        <item quantity="other"><![CDATA[已授权 %d 个应用]]></item>
     </plurals>
-    <string name="view_authorized_apps"><![CDATA[令牌只会在服务重启后失效<br>点击管理授权的应用]]></string>
+    <string name="view_authorized_apps"><![CDATA[轻触管理授权的应用]]></string>
     <string name="copied_to_clipboard">%s\n已被复制到剪贴板。</string>
     <string name="open_manager">打开 Shizuku Manager</string>
     <string name="action_about">关于</string>
@@ -55,5 +56,7 @@
     <string name="notification_service_start_no_root">请求 root 权限失败。</string>
     <string name="channel_work_status">工作状态</string>
     <string name="notification_working">工作中…</string>
+    <string name="no_v3_support">* 尚未适配 Shizuku v3</string>
+    <string name="service_name_v2">v2（旧式）</string>
 
 </resources>
