--- a/manager/src/main/res/values-zh-rHK/strings.xml
+++ b/manager/src/main/res/values-zh-rHK/strings.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="permission_group_description">使用由 Shizuku 提供的特權 API</string>
-    <string name="permission_label">使用 Shizuku 特權 API</string>
-    <string name="permission_description">允許應用程式使用由 Shizuku 提供的特權 API。</string>
-    <string name="server_running">版本 %2$d 執行中（%1$s）</string>
-    <string name="server_running_update">版本 %2$d 執行中（%1$s）\n重新啟動服務以升級至版本 %3$d</string>
-    <string name="server_not_running">按此檢查服務是否執行</string>
-    <string name="server_require_restart">需要重新啟動服務</string>
-    <string name="server_no_token">執行中，但未正確接收憑證\n點擊請求憑證</string>
+    <string name="permission_group_description">使用 Shizuku</string>
+    <string name="permission_label">以更高許可權使用系統 API</string>
+    <string name="permission_description">允許應用程式以更高許可權使用系統 API。</string>
+    <string name="server_running">服務 %1$s 正在執行（版本 %3$d， %2$s）</string>
+    <string name="server_running_update">服務 %1$s 正在執行（版本 %3$d， %2$s，重新啟動以升級到版本 %4$d）</string>
+    <string name="server_not_running">服務 %1$s 沒有執行</string>
+    <string name="server_not_running_tap_retry">服務 %1$s 沒有執行，輕觸重新檢查</string>
+    <string name="server_require_restart">服務 %1$s 需要重新啟動</string>
+    <string name="server_no_token">服务 %1$s 正在运行，但未正確接收憑證，點擊請求憑證</string>
     <string name="server_start">啟動</string>
     <string name="server_restart">重新啟動</string>
-    <string name="start_server_title_root"><![CDATA[透過 root 權限啟動服務]]></string>
-    <string name="start_server_title_adb"><![CDATA[透過 adb 啟動或升級服務]]></string>
+    <string name="start_server_title_root"><![CDATA[透過 root 權限啟動核心服務]]></string>
+    <string name="start_server_title_adb"><![CDATA[透過 adb 啟動或升級核心服務]]></string>
     <string name="start_server_summary_adb"><![CDATA[
     <b>以下步驟需要在每次重新啟動後進行。</b>
     <p>在「開發人員選項」中開啟「USB 偵錯」，將裝置連接至電腦。
@@ -26,14 +27,14 @@
     <string name="auth_allow">一律允許</string>
     <string name="auth_deny">拒絕</string>
     <string name="auth_message"><![CDATA[要允許 <b>%1$s</b> 以 <b>%2$s</b> 身份調用 API 嗎？]]></string>
-    <string name="auth_manager_no_token">Shizuku Manager 未正確接收憑證，請嘗試重新啟動服務，或是使用主介面的取得憑證。</string>
-    <string name="auth_server_dead">可能由於非正常重新啟動等原因，服務需要重新啟動。</string>
-    <string name="auth_cannot_connect">無法連接服務，請確認服務正在執行。</string>
-    <string name="authorized_apps_manage">自動授權的程式</string>
+    <string name="auth_manager_no_token">Shizuku Manager 未正確接收憑證，請嘗試重新啟動核心服務，或是使用主介面的取得憑證。</string>
+    <string name="auth_server_dead">可能由於非正常重新啟動等原因，核心服務需要重新啟動。</string>
+    <string name="auth_cannot_connect">無法連線至核心服務，請確認其正在執行。</string>
+    <string name="authorized_apps_manage">已授權的應用程式</string>
     <plurals name="authorized_apps_count">
-        <item quantity="other"><![CDATA[已授權 %d 個無需確認取得憑證的程式]]></item>
+        <item quantity="other"><![CDATA[已授權 %d 個程式]]></item>
     </plurals>
-    <string name="view_authorized_apps"><![CDATA[憑證只會在服務重新啟動後失效<br>按此管理授權的程式]]></string>
+    <string name="view_authorized_apps"><![CDATA[輕觸管理授權的程式]]></string>
     <string name="copied_to_clipboard">%s\n已被複製到剪貼簿。</string>
     <string name="open_manager">開啟 Shizuku Manager</string>
     <string name="action_about">關於</string>
@@ -55,5 +56,8 @@
     <string name="notification_service_start_no_root">請求 root 權限失敗。</string>
     <string name="channel_work_status">工作狀態</string>
     <string name="notification_working">工作中…</string>
+    <string name="no_v3_support">* 尚未適配 Shizuku v3</string>
+    <string name="v3_not_running">核心服務 v3 沒有執行</string>
+    <string name="service_name_v2">v2（舊式）</string>
 
 </resources>
