--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -3,16 +3,16 @@
     <string name="permission_group_description">使用 Shizuku</string>
     <string name="permission_label">以更高許可權使用系統 API</string>
     <string name="permission_description">允許應用程式以更高許可權使用系統 API。</string>
-    <string name="server_running">服務 %1$s 正在執行（版本 %3$d， %2$s）</string>
-    <string name="server_running_update">服務 %1$s 正在執行（版本 %3$d， %2$s，重新啟動以升級到版本 %4$d）</string>
+    <string name="server_running">服務 %1$s 正在執行（版本 %3$d，%2$s）</string>
+    <string name="server_running_update">服務 %1$s 正在執行（版本 %3$d，%2$s，重新啟動以升級到版本 %4$d）</string>
     <string name="server_not_running">服務 %1$s 沒有執行</string>
     <string name="server_not_running_tap_retry">服務 %1$s 沒有執行，輕觸重新檢查</string>
     <string name="server_require_restart">服務 %1$s 需要重新啟動</string>
     <string name="server_no_token">服务 %1$s 正在运行，但未正確接收憑證，點擊請求憑證</string>
     <string name="server_start">啟動</string>
     <string name="server_restart">重新啟動</string>
-    <string name="start_server_title_root"><![CDATA[透過 root 權限啟動核心服務]]></string>
-    <string name="start_server_title_adb"><![CDATA[透過 adb 啟動或升級核心服務]]></string>
+    <string name="start_server_title_root"><![CDATA[透過 root 權限啟動服務]]></string>
+    <string name="start_server_title_adb"><![CDATA[透過 adb 啟動或升級服務]]></string>
     <string name="start_server_summary_adb"><![CDATA[
     <b>以下步驟需要在每次重新啟動後進行。</b>
     <p>在「開發人員選項」中開啟「USB 偵錯」，將裝置連接至電腦。
@@ -57,7 +57,9 @@
     <string name="channel_work_status">工作狀態</string>
     <string name="notification_working">工作中…</string>
     <string name="no_v3_support">* 尚未適配 Shizuku v3</string>
-    <string name="v3_not_running">核心服務 v3 沒有執行</string>
+    <string name="v3_not_running">服務 v3 沒有執行</string>
     <string name="service_name_v2">v2（舊式）</string>
+    <string name="settings_language">語言</string>
+    <string name="settings_user_interface">界面外觀</string>
 
 </resources>
