--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="server_running_update">Service %1$s is running (version %3$d, %2$s, restart to update to version %4$d)</string>
     <string name="server_not_running">Service %1$s not running</string>
     <string name="server_not_running_tap_retry">Service %1$s not running, tap to check again</string>
-    <string name="server_require_restart">>Service %1$s requires restart</string>
+    <string name="server_require_restart">Service %1$s requires restart</string>
     <string name="server_no_token">Service %1$s is running, but no correct token received, tap to request token</string>
     <string name="server_start">Start</string>
     <string name="server_restart">Restart</string>
