--- a/manager/src/main/res/values-zh-rHK-v26/strings.xml
+++ b/manager/src/main/res/values-zh-rHK-v26/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="start_server_summary_adb"><![CDATA[
     由於系統行爲變化，在 Android 8.0 之後，請<b>不要關閉「USB 調試」</b>並保證 <b>USB 使用模式不變</b>，否則服務將被停止。
+    此外，<b>如果出現來自系統的對話框，在拔下 USB 線前，請不要點選</b>。
     <p><b>以下步驟需要在每次重新啟動後進行。</b>
     <p>在「開發人員選項」中開啟「USB 偵錯」，將裝置連接至電腦。
     <br>在電腦的命令提示字元中輸入以下內容
