--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="permission_label">access system APIs with higher privileges</string>
     <string name="permission_description">Allow the app to use system APIs with higher privileges.</string>
     <string name="server_running">Service %1$s is running (version %3$d, %2$s)</string>
-    <string name="server_running_update">Service %1$s is running (version %3$d, %2$s, restart to update to version %4$d)</string>
+    <string name="server_running_update">Service %1$s is running (version %3$d, %2$s, start again to update to version %4$d)</string>
     <string name="server_not_running">Service %1$s not running</string>
     <string name="server_not_running_tap_retry">Service %1$s not running, tap to check again</string>
     <string name="server_require_restart">Service %1$s requires restart</string>
