--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -60,5 +60,7 @@
     <string name="service_name_v2">v2（旧式）</string>
     <string name="settings_language">语言</string>
     <string name="settings_user_interface">界面外观</string>
+    <string name="black_night_theme">黑色夜间主题</string>
+    <string name="black_night_theme_summary">当夜间模式启用时使用纯黑色主题</string>
 
 </resources>
