--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -21,7 +21,9 @@
     <p>按下確認鍵，如果成功將看到主介面的執行狀態更新。]]></string>
     <string name="start_server_summary_root"><![CDATA[
     若啓動成功，則 Shizuku 將在開機後自動啓動。
-    <br>如果無法正常工作，請檢查您的系統或是第三方工具是否限制了 Shizuku Manager 開機啓動。]]></string>
+    <br>如果無法正常開機啓動，請檢查您的系統或是第三方工具是否限制了 Shizuku Manager。
+    <p>除 Google 外，幾乎所有廠商都有自己的後臺限制機制（部分廠商尤為瘋狂，如 OnePlus，嚴重影響許多應用程式的功能）。
+    <br>請參考 <b><a href="https://dontkillmyapp.com/">dontkillmyapp.com</a></b> 瞭解如何關閉限制。]]></string>
     <string name="copy_command">複製</string>
     <string name="send_command">傳送</string>
     <string name="auth_allow">一律允許</string>
