--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -21,7 +21,9 @@
     <p>The server running status will refresh if this operation succeed]]></string>
     <string name="start_server_summary_root"><![CDATA[
     If successful starts, Shizuku will automatically start after boot.
-    <br>If this not work properly, please check if your system or third-party tools have restricted start on boot of Shizuku Manager.]]></string>
+    <br>If Shizuku Manager can\'t start on boot properly, please check if your system or third-party tools have restricted Shizuku Manager.
+    <p>Almost all vendors except Google have their own background restriction mechanism (some vendors are vary crazy, such as OnePlus, which seriously affects the functionality of many apps).
+    <br>Please refer to <b><a href="https://dontkillmyapp.com/">dontkillmyapp.com</a></b> for instructions on how to turn off restrictions. ]]></string>
     <string name="copy_command">Copy</string>
     <string name="send_command">Send</string>
     <string name="auth_allow">Always allow</string>
