--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -58,7 +58,7 @@
     <string name="notification_service_start_no_root">请求 root 权限失败。</string>
     <string name="channel_work_status">工作状态</string>
     <string name="notification_working">工作中…</string>
-    <string name="no_v3_support">* 尚未适配 Shizuku v3</string>
+    <string name="no_v3_support">* 需要 Shizuku v2</string>
     <string name="service_name_v2">v2（旧式）</string>
     <string name="settings_language">语言</string>
     <string name="settings_user_interface">界面外观</string>
