--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -42,7 +42,8 @@
     <string name="copied_to_clipboard">%s\nhas been copied to clipboard.</string>
     <string name="open_manager">Open Shizuku Manager</string>
     <string name="action_about">About</string>
-    <string name="about_icon_credits"><![CDATA[Thanks <a href="https://twitter.com/xiaoya_er">小雅</a> for illustrating app icon]]></string>
+    <string name="about_icon_credits"><![CDATA[Thanks <b><a href="https://twitter.com/xiaoya_er">小雅</a></b> for illustrating app icon]]></string>
+    <string name="about_source_code"><![CDATA[View source code at <b><a href="https://github.com/RikkaApps/Shizuku">GitHub</a></b>]]></string>
     <string name="action_settings">Settings</string>
     <string name="start_root_choose_launch_method">Choose start method</string>
     <string name="start_root_method_usual">The usual way</string>
