--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -3,23 +3,26 @@
     <string name="permission_group_description">使用 Shizuku</string>
     <string name="permission_label">以更高权限使用系统 API</string>
     <string name="permission_description">允许应用以更高权限使用系统 API。</string>
-    <string name="server_running">服务 %1$s 正在运行（版本 %3$d，%2$s）</string>
-    <string name="server_running_update">服务 %1$s 正在运行（版本 %3$d，%2$s，再次启动来升级到版本 %4$d）</string>
-    <string name="server_not_running">服务 %1$s 没有运行</string>
-    <string name="server_not_running_tap_retry">服务 %1$s 没有运行，轻触重新检查</string>
-    <string name="server_require_restart">服务 %1$s 需要重新启动</string>
-    <string name="server_no_token">服务 %1$s 正在运行，但未正确接收令牌，点击请求令牌</string>
-    <string name="server_start">启动</string>
-    <string name="server_restart">重新启动</string>
-    <string name="start_server_title_root"><![CDATA[通过 root 权限启动服务]]></string>
-    <string name="start_server_title_adb"><![CDATA[通过 adb 启动或升级服务]]></string>
-    <string name="start_server_summary_adb"><![CDATA[
+    <string name="service_name">服务</string>
+    <string name="service_legacy_name">旧式服务</string>
+    <string name="service_running">%1$s正在运行</string>
+    <string name="service_version">版本 %2$d，%1$s</string>
+    <string name="service_version_update">版本 %2$d，%1$s，再次启动来升级到版本 %3$d</string>
+    <string name="service_not_running">%1$s没有运行</string>
+    <string name="service_not_running_tap_retry">%1$s没有运行，轻触重新检查</string>
+    <string name="service_legacy_require_restart">%1$s需要重新启动</string>
+    <string name="service_legacy_no_token">%1$s正在运行，但未正确接收令牌，点击请求令牌</string>
+    <string name="service_start">启动</string>
+    <string name="service_restart">重新启动</string>
+    <string name="start_service_title_root"><![CDATA[通过 root 权限启动服务]]></string>
+    <string name="start_service_title_adb"><![CDATA[通过 adb 启动或升级服务]]></string>
+    <string name="start_service_summary_adb"><![CDATA[
     <b>以下步骤需要在每次重新启动后进行。</b>
     <p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。
     <br>在电脑的终端中输入以下内容
     <p><font face="monospace">%s</font>
     <p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
-    <string name="start_server_summary_root"><![CDATA[
+    <string name="start_service_summary_root"><![CDATA[
     若启动成功，则 Shizuku 将在开机后自动启动。
     <br>如果无法正常开机启动，请检查您的系统或是第三方工具是否限制了 Shizuku Manager。
     <p>除 Google 外，几乎所有厂商都有自己的后台限制机制（部分厂商尤为疯狂，如 OnePlus，严重影响许多应用的功能）。
@@ -30,7 +33,7 @@
     <string name="auth_deny">拒绝</string>
     <string name="auth_message"><![CDATA[要允许 <b>%1$s</b> 以 <b>%2$s</b> 身份调用 API 吗？]]></string>
     <string name="auth_manager_no_token">Shizuku Manager 未正确接收令牌，请尝试重新启动核心服务，或是使用主界面的获取令牌。</string>
-    <string name="auth_server_dead">可能由于非正常重启等原因，核心服务需要重新启动。</string>
+    <string name="auth_service_dead">可能由于非正常重启等原因，核心服务需要重新启动。</string>
     <string name="auth_cannot_connect">无法连接至核心服务，请确认其正在运行。</string>
     <string name="authorized_apps_manage">已授权的应用</string>
     <plurals name="authorized_apps_count">
@@ -59,18 +62,17 @@
     <string name="notification_service_start_no_root">请求 root 权限失败。</string>
     <string name="channel_work_status">工作状态</string>
     <string name="notification_working">工作中…</string>
-    <string name="no_v3_support">* 需要 Shizuku v2</string>
-    <string name="service_name_v2">v2（旧式）</string>
+    <string name="requires_legacy">* 需要旧式 Shizuku</string>
     <string name="settings_language">语言</string>
     <string name="settings_user_interface">界面外观</string>
     <string name="black_night_theme">黑色夜间主题</string>
     <string name="black_night_theme_summary">当夜间模式启用时使用纯黑色主题</string>
     <string name="settings_startup">启动</string>
-    <string name="start_v2_service">不要启动 v2（旧式）服务</string>
-    <plurals name="start_v2_service_summary">
-        <item quantity="other">共有 %d 个应用需要 v2 服务</item>
+    <string name="start_legacy_service">不要启动旧式服务</string>
+    <plurals name="start_legacy_service_summary">
+        <item quantity="other">共有 %d 个应用需要旧式服务</item>
     </plurals>
-    <string name="start_v2_service_summary_no_service">你可以在已授权的应用中查看应用是否需要 v2 服务</string>
+    <string name="start_legacy_service_summary_no_service">你可以在已授权的应用中查看应用是否需要旧式服务</string>
     <string name="action_view_apps">获取更多</string>
     <string name="adb_no_permission_title">adb 权限受限</string>
     <string name="adb_no_permission_message"><![CDATA[这通常是由您的设备供应商完成，我们无法解决。<br>请尝试在「开发者选项」中查找相关选项。例如，在 MIUI 中，选项是「USB 调试（安全设置）」。]]></string>
