--- a/manager/src/main/res/values-zh-rHK/strings.xml
+++ b/manager/src/main/res/values-zh-rHK/strings.xml
@@ -3,23 +3,26 @@
     <string name="permission_group_description">使用 Shizuku</string>
     <string name="permission_label">以更高許可權使用系統 API</string>
     <string name="permission_description">允許應用程式以更高許可權使用系統 API。</string>
-    <string name="server_running">服務 %1$s 正在執行（版本 %3$d，%2$s）</string>
-    <string name="server_running_update">服務 %1$s 正在執行（版本 %3$d，%2$s，再次啟動以升級到版本 %4$d）</string>
-    <string name="server_not_running">服務 %1$s 沒有執行</string>
-    <string name="server_not_running_tap_retry">服務 %1$s 沒有執行，輕觸重新檢查</string>
-    <string name="server_require_restart">服務 %1$s 需要重新啟動</string>
-    <string name="server_no_token">服务 %1$s 正在运行，但未正確接收憑證，點擊請求憑證</string>
-    <string name="server_start">啟動</string>
-    <string name="server_restart">重新啟動</string>
-    <string name="start_server_title_root"><![CDATA[透過 root 權限啟動服務]]></string>
-    <string name="start_server_title_adb"><![CDATA[透過 adb 啟動或升級服務]]></string>
-    <string name="start_server_summary_adb"><![CDATA[
+    <string name="service_name">服務</string>
+    <string name="service_legacy_name">舊式服務</string>
+    <string name="service_running">%1$s正在執行</string>
+    <string name="service_version">版本 %2$d，%1$s</string>
+    <string name="service_version_update">版本 %2$d，%1$s，再次啟動來升級到版本 %3$d</string>
+    <string name="service_not_running">%1$s沒有執行</string>
+    <string name="service_not_running_tap_retry">%1$s沒有執行，輕觸重新檢查</string>
+    <string name="service_legacy_require_restart">%1$s需要重新啟動</string>
+    <string name="service_legacy_no_token">%1$s正在运行，但未正確接收憑證，點擊請求憑證</string>
+    <string name="service_start">啟動</string>
+    <string name="service_restart">重新啟動</string>
+    <string name="start_service_title_root"><![CDATA[透過 root 權限啟動服務]]></string>
+    <string name="start_service_title_adb"><![CDATA[透過 adb 啟動或升級服務]]></string>
+    <string name="start_service_summary_adb"><![CDATA[
     <b>以下步驟需要在每次重新啟動後進行。</b>
     <p>在「開發人員選項」中開啟「USB 偵錯」，將裝置連接至電腦。
     <br>在電腦的命令提示字元中輸入以下內容
     <p><font face="monospace">%s</font>
     <p>按下確認鍵，如果成功將看到主介面的執行狀態更新。]]></string>
-    <string name="start_server_summary_root"><![CDATA[
+    <string name="start_service_summary_root"><![CDATA[
     若啓動成功，則 Shizuku 將在開機後自動啓動。
     <br>如果無法正常開機啓動，請檢查您的系統或是第三方工具是否限制了 Shizuku Manager。
     <p>除 Google 外，幾乎所有廠商都有自己的後臺限制機制（部分廠商尤為瘋狂，如 OnePlus，嚴重影響許多應用程式的功能）。
@@ -30,7 +33,7 @@
     <string name="auth_deny">拒絕</string>
     <string name="auth_message"><![CDATA[要允許 <b>%1$s</b> 以 <b>%2$s</b> 身份調用 API 嗎？]]></string>
     <string name="auth_manager_no_token">Shizuku Manager 未正確接收憑證，請嘗試重新啟動核心服務，或是使用主介面的取得憑證。</string>
-    <string name="auth_server_dead">可能由於非正常重新啟動等原因，核心服務需要重新啟動。</string>
+    <string name="auth_service_dead">可能由於非正常重新啟動等原因，核心服務需要重新啟動。</string>
     <string name="auth_cannot_connect">無法連線至核心服務，請確認其正在執行。</string>
     <string name="authorized_apps_manage">已授權的應用程式</string>
     <plurals name="authorized_apps_count">
@@ -59,12 +62,17 @@
     <string name="notification_service_start_no_root">請求 root 權限失敗。</string>
     <string name="channel_work_status">工作狀態</string>
     <string name="notification_working">工作中…</string>
-    <string name="no_v3_support">* 需要 Shizuku v2</string>
-    <string name="service_name_v2">v2（舊式）</string>
+    <string name="requires_legacy">* 需要舊式 Shizuku</string>
     <string name="settings_language">語言</string>
     <string name="settings_user_interface">界面外觀</string>
     <string name="black_night_theme">黑色夜間主題</string>
     <string name="black_night_theme_summary">當夜間模式啟用時使用純黑色主題</string>
+    <string name="settings_startup">啟動</string>
+    <string name="start_legacy_service">不要啟動舊式服務</string>
+    <plurals name="start_legacy_service_summary">
+        <item quantity="other">共有 %d 個應用程式需要舊式服務</item>
+    </plurals>
+    <string name="start_legacy_service_summary_no_service">你可以在已授權的應用程式中檢視應用程式是否需要舊式服務</string>
     <string name="action_view_apps">取得更多</string>
     <string name="adb_no_permission_title">adb 權限受限</string>
     <string name="adb_no_permission_message"><![CDATA[這通常是由您的裝置供應商完成，我們無法解決。<br>請嘗試在「開發者選項」中查詢相關選項。例如，在 MIUI 中，選項是「USB 除錯（安全設定）」。]]></string>
