--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -16,12 +16,7 @@
     <string name="service_restart">重新启动</string>
     <string name="start_service_title_root"><![CDATA[通过 root 权限启动服务]]></string>
     <string name="start_service_title_adb"><![CDATA[通过 adb 启动或升级服务]]></string>
-    <string name="start_service_summary_adb"><![CDATA[
-    <b>以下步骤需要在每次重新启动后进行。</b>
-    <p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。
-    <br>在电脑的终端中输入以下内容
-    <p><font face="monospace">%s</font>
-    <p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
+    <string name="start_service_summary_adb"><![CDATA[使用 adb 并不困难，请阅读下面的帮助。<br>帮助随时更新，并包含遇到问题的解决方案。]]></string>
     <string name="start_service_summary_root"><![CDATA[
     若启动成功，则 Shizuku 将在开机后自动启动。
     <br>如果无法正常开机启动，请检查您的系统或是第三方工具是否限制了 Shizuku Manager。
@@ -76,5 +71,8 @@
     <string name="action_view_apps">获取更多</string>
     <string name="adb_no_permission_title">adb 权限受限</string>
     <string name="adb_no_permission_message"><![CDATA[这通常是由您的设备供应商完成，我们无法解决。<br>请尝试在「开发者选项」中查找相关选项。例如，在 MIUI 中，选项是「USB 调试（安全设置）」。]]></string>
+    <string name="view_detailed_online_help">阅读详细在线帮助</string>
+    <string name="dialog_cannot_open_browser_title">无法启动浏览器</string>
+    <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被复制到剪贴板。]]></string>
 
 </resources>
