--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -16,12 +16,7 @@
     <string name="service_restart">重新啟動</string>
     <string name="start_service_title_root"><![CDATA[透過 root 權限啟動服務]]></string>
     <string name="start_service_title_adb"><![CDATA[透過 adb 啟動或升級服務]]></string>
-    <string name="start_service_summary_adb"><![CDATA[
-    <b>以下步驟需要在每次重新啟動後進行。</b>
-    <p>在「開發人員選項」中開啟「USB 偵錯」，將裝置連接至電腦。
-    <br>在電腦的命令提示字元中輸入以下內容
-    <p><font face="monospace">%s</font>
-    <p>按下確認鍵，如果成功將看到主介面的執行狀態更新。]]></string>
+    <string name="start_service_summary_adb"><![CDATA[使用 adb 並不困難，請閱讀下面的幫助。<br>幫助隨時更新，幷包含遇到問題的解決方案。]]></string>
     <string name="start_service_summary_root"><![CDATA[
     若啓動成功，則 Shizuku 將在開機後自動啓動。
     <br>如果無法正常開機啓動，請檢查您的系統或是第三方工具是否限制了 Shizuku Manager。
@@ -76,4 +71,8 @@
     <string name="action_view_apps">取得更多</string>
     <string name="adb_no_permission_title">adb 權限受限</string>
     <string name="adb_no_permission_message"><![CDATA[這通常是由您的裝置供應商完成，我們無法解決。<br>請嘗試在「開發者選項」中查詢相關選項。例如，在 MIUI 中，選項是「USB 除錯（安全設定）」。]]></string>
+    <string name="view_detailed_online_help">閱讀詳細線上幫助</string>
+    <string name="dialog_cannot_open_browser_title">無法啟動瀏覽器</string>
+    <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被複制到剪貼簿。]]></string>
+
 </resources>
