--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -19,7 +19,7 @@
     <string name="start_service_summary_adb"><![CDATA[使用 adb 並不困難，請閱讀下面的幫助。<br>幫助隨時更新，幷包含遇到問題的解決方案。]]></string>
     <string name="start_service_summary_root"><![CDATA[
     若啓動成功，則 Shizuku 將在開機後自動啓動。
-    <br>如果無法正常開機啓動，請檢查您的系統或是第三方工具是否限制了 Shizuku Manager。
+    <br>如果無法正常開機啓動，請檢查您的系統或是第三方工具是否限制了 Shizuku。
     <p>除 Google 外，幾乎所有廠商都有自己的後臺限制機制（部分廠商尤為瘋狂，如 OnePlus，嚴重影響許多應用程式的功能）。
     <br>請參考 <b><a href="https://dontkillmyapp.com/">dontkillmyapp.com</a></b> 瞭解如何關閉限制。]]></string>
     <string name="copy_command">複製</string>
@@ -27,7 +27,7 @@
     <string name="auth_allow">一律允許</string>
     <string name="auth_deny">拒絕</string>
     <string name="auth_message"><![CDATA[要允許 <b>%1$s</b> 以 <b>%2$s</b> 身份調用 API 嗎？]]></string>
-    <string name="auth_manager_no_token">Shizuku Manager 未正確接收憑證，請嘗試重新啟動核心服務，或是使用主介面的取得憑證。</string>
+    <string name="auth_manager_no_token">Shizuku 未正確接收憑證，請嘗試重新啟動核心服務，或是使用主介面的取得憑證。</string>
     <string name="auth_service_dead">可能由於非正常重新啟動等原因，核心服務需要重新啟動。</string>
     <string name="auth_cannot_connect">無法連線至核心服務，請確認其正在執行。</string>
     <string name="authorized_apps_manage">已授權的應用程式</string>
@@ -36,7 +36,7 @@
     </plurals>
     <string name="view_authorized_apps"><![CDATA[輕觸管理授權的程式]]></string>
     <string name="copied_to_clipboard">%s\n已被複製到剪貼簿。</string>
-    <string name="open_manager">開啟 Shizuku Manager</string>
+    <string name="open_manager">開啟 Shizuku</string>
     <string name="action_about">關於</string>
     <string name="about_icon_credits"><![CDATA[感謝 <a href="https://twitter.com/xiaoya_er">小雅</a> 製作應用程式的圖示]]></string>
     <string name="about_source_code"><![CDATA[在 <b><a href="https://github.com/RikkaApps/Shizuku">GitHub</a></b> 查看原始碼]]></string>
