--- a/manager/src/main/res/values-zh-rHK/strings.xml
+++ b/manager/src/main/res/values-zh-rHK/strings.xml
@@ -74,5 +74,6 @@
     <string name="view_detailed_online_help">閱讀詳細線上幫助</string>
     <string name="dialog_cannot_open_browser_title">無法啟動瀏覽器</string>
     <string name="toast_copied_to_clipboard_with_text"><![CDATA[<b>%s</b> 已被複制到剪貼簿。]]></string>
+    <string name="get_more_summary">檢視使用 Shizuku 的應用程式</string>
 
 </resources>
